src/style.css
:root {
    --title-font: "Estonia";
    --main-font: "Bitter";
    --font-color: #fff;
    --accent-color: #ffb702;
    --main-color: #24282c;
    --desc-size: 1.6rem;
}

body {
    position: relative;
    min-height: 100dvh;
    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("./background.jpg");
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    background-color: var(--main-color);
    font-family: var(--main-font), sans-serif;

    & #content {
        color: var(--font-color);
        display: grid;
        place-content: center;
    }
}

.header__container {

    & .nav__container {
        padding: 1em;
        display: flex;
        max-width: 100%;
        flex-wrap: wrap;
        justify-content: center;
        align-items: center;
        gap: 12px;
        background-color: var(--main-color);
        border-bottom: 4px solid var(--accent-color);

        & button {
            color: var(--font-color);
            padding: 0.6em 1.2em;
            font-size: 2rem;
            background-color: transparent;
            border: none;
            cursor: pointer;
        }

        & button:hover {
            color: var(--accent-color);
        }

    }
}


.title__container {
    color: var(--font-color);
    display: grid;
    grid-template-rows: repeat(auto-fit, minmax(min(80%, 250px), 1fr));
    justify-content: center;
    justify-items: center;
    font-size: min(3.2rem, 12dvw - 1rem);

    & .greeting {
        color: var(--accent-color);
        align-self: end;
        font-size: min(6rem, 24dvw - 1.5rem);
        font-family: var(--title-font), sans-serif;
        transform: translateY(50%);
    }

    & button {
        color: var(--font-color);
        border-radius: 32px;
        padding: 0.2em 0.4em;
        border: var(--font-color) solid 5px;
        background-color: transparent;
        cursor: pointer;
    }
}

